2009-01-13  Roland Mas  <lolando@debian.org>

	* plugins/wiki/www/u: Remove call to the old $Language->getText()
	API.

	* common/include/gettext.php: Fixed language_name_to_lang_id()
	function (patch #5629 from Mickaël Bridard).

2008-11-25  Roland Mas  <lolando@debian.org>

	* common/include/GroupJoinRequest.class.php: Properly escape the
	comments value to avoid an SQL injection
	vulnerability (CVE-2008-2381).

2008-09-18  Roland Mas  <lolando@debian.org>

	* plugins/scmcvs/sbin/cvs-pserver: Reimplemented repository
	listing with find rather than ls.  Large performance gain.

2008-09-03  Roland Mas  <lolando@debian.org>

	* common/tracker/ArtifactType.class.php: Fixed PostgreSQL 8.3
	compatibility by explicitly converting role_setting.value to an
	integer.
	* common/tracker/ArtifactTypeFactory.class.php: Ditto.
	* common/pm/ProjectGroup.class.php: Ditto.
	* common/pm/ProjectGroupFactory.class.php: Ditto.
	* common/forum/Forum.class.php: Ditto.
	* common/forum/ForumFactory.class.php: Ditto.
	* plugins/webcalendar/www/index2.php: Ditto.
	* www/pm/msproject/msp.php: Ditto.
	* www/tracker/admin/form-extrafieldcopy.php: Ditto.
	* www/tracker/mod.php: Ditto.

2008-08-18  Roland Mas  <lolando@debian.org>

	* common/include/PluginManager.class.php: Allow return values for
	plugins (patch #2689 by Alain Peyrat).

	* plugins/scmcvs/cronjobs/history_parse.php: Fixed DB commit
	underflow (patch #2207 by Yann Dirson).

	* common/include/Group.class.php: Added new hooks (patch #1715 by
	Nicolas Quienot).
	* common/include/User.class.php: Ditto.

	* cronjobs/db_trove_maint.php: Enable showing private projects in
	Trove map (patch #1264 by Vittal Aithal).

2008-07-20  Roland Mas  <lolando@debian.org>

	* common/reporting/report_utils.php: Search user by the initial
	letter of their username, as well as their lastname.

	* etc/local.d/10database.env: Only call apache_request_headers
	when available.

	* common/reporting/ReportTrackerAct.class.php: Fixed off-by-one