@@ -38,7 +38,7 @@ if ($GLOBALS['submit']) {
 
 		if (!$res || db_affected_rows($res)<1) {
 			exit_error(
-				$Language->getText('admin_trove_cat_add','error_in_trove_openration'),
+				_('Error in Trove operation'),
 				db_error()
 			);
 		}
@@ -50,13 +50,13 @@ if ($GLOBALS['submit']) {
 	session_redirect("/admin/trove/trove_cat_list.php");
 } 
 
-site_admin_header(array('title'=>$Language->getText('admin_trove_cat_add','title')));
+site_admin_header(array('title'=>_('Site Admin: Trove - Add Node')));
 ?>
 
-<h3><?php echo $Language->getText('admin_trove_cat_add','add_new_trove_category'); ?></h3>
+<h3><?php echo _('Add New Trove Category'); ?></h3>
 
 <form action="trove_cat_add.php" method="post">
-<p><?php echo $Language->getText('admin_trove_cat_add','parent_category'); ?>:<?php echo utils_requiredField(); ?>
+	<p><?php echo _('Parent Category: '); ?><?php echo utils_requiredField(); ?>
 <br /><select name="form_parent">
 
 <?php
@@ -84,13 +84,13 @@ if (isset($parent_trove_cat_id)) {
 ?>
 
 </select></p>
-<p><?php echo $Language->getText('admin_trove_cat_add','new_category_short_name'); ?>:<?php echo utils_requiredField(); ?>
+<p><?php echo _('New category short name (no spaces, Unix-like): '); ?> <?php echo utils_requiredField(); ?>
 <br /><input type="text" name="form_shortname" /></p>
-<p><?php echo $Language->getText('admin_trove_cat_add','new_category_full_name'); ?>:<?php echo utils_requiredField(); ?>
+	<p><?php echo _('New category full name (80 characters max): '); ?> <?php echo utils_requiredField(); ?>
 <br /><input type="text" name="form_fullname" /></p>
-<p><?php echo $Language->getText('admin_trove_cat_add','new_category_description'); ?>:<?php echo utils_requiredField(); ?>
+<p><?php echo _('New category description (255 characters max): '); ?> <?php echo utils_requiredField(); ?>
 <br /><input type="text" size="80" name="form_description" />
-<br /><input type="submit" name="submit" value="<?php echo $Language->getText('admin_trove_cat_add','add'); ?>" /></p>
+<br /><input type="submit" name="submit" value="<?php echo _('Add'); ?>" /></p>
 </form>
 
 <?php
