@@ -239,10 +239,8 @@ function trove_getcatlisting($group_id,$a_filter,$a_cats) {
 
 	$return = '';
 	if (db_numrows($res_trovecat) < 1) {
-		$return .= $Language->getText('trove','not_categorized')
-			.' <a href="/softwaremap/trove_list.php">'
-			. $Language->getText('trove','title')
-			.'</a>.<p />';
+		$return .= sprintf (_('This project has not yet categorized itself in the <a href="%s">Trove Software Map</a>.'), util_make_url ('/softwaremap/trove_list.php'))
+			.'<p />';
 	} else {
 		$return .= '<ul>';
 		$need_close_ul_tag = 1;
